<resources>
    <string name="app_name">SearchMovie</string>

    <!-- Menu -->
    <string name="menu_movies">Filmes</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_about">Sobre</string>

    <!-- Movies -->
    <string name="movies_list">Lista de filmes</string>
    <string name="favorite_movies_list">Lista de filmes favoritos</string>

    <!-- About -->
    <string name="info_name">Name</string>
    <string name="info_name_value">Fabio Oliveira</string>
    <string name="info_age">Age</string>
    <string name="info_age_value">27</string>
    <string name="info_email">E-mail</string>
    <string name="info_email_value">fabio91oliveira@gmail.com</string>
    <string name="info_phone">Phone</string>
    <string name="info_phone_value">+55 (21) 98191–4951</string>

    <string name="no_information">Sem informações sobre...</string>
    <string name="has_error">Ocorreu um erro, tente novamente</string>
    <string name="no_results">Nenhum resultado encontrado</string>
    <string name="no_favorites">Nenhum favorito encontrado</string>
</resources>
